0.10.0
------
- The Python build layout has changed:
  * The apache.thermos package has been removed.
  * The apache.gen.aurora package has been renamed to apache.aurora.thrift.
  * The apache.gen.thermos package has been renamed to apache.thermos.thrift.
  * A new apache.thermos.runner package has been introduced, providing the thermos_runner binary.
  * A new apache.aurora.kerberos package has been introduced, containing the Kerberos-supporting
    versions of aurora and aurora_admin (kaurora and kaurora_admin).
  * Most BUILD targets under src/main have been removed, see http://s.apache.org/b8z for details.

0.9.0
-----

- Now requires JRE 8 or greater.
- GC executor is fully replaced by the task state reconciliation (AURORA-1047).
- The scheduler command line argument 'enable_legacy_constraints' has been
  removed, and the scheduler no longer automatically injects 'host' and 'rack'
  constraints for production services. (AURORA-1074)
- SLA metrics for non-production jobs have been disabled by default. They can
  be enabled via the scheduler command line. Metric names have changed from
  '...nonprod_ms' to "...ms_nonprod" (AURORA-1350).

0.8.0
-----

- A new command line argument was added to the observer: --mesos-root
  This must point to the same path as --work_dir on the mesos slave.
- Build targets for thermos and observer have changed, they are now:
  * src/main/python/apache/aurora/tools:thermos
  * src/main/python/apache/aurora/tools:thermos_observer