@@ -282,7 +282,7 @@ dependencies {
   compile 'javax.servlet:servlet-api:2.5'
   compile "log4j:log4j:${log4jRev}"
   compile 'org.antlr:stringtemplate:3.2.1'
-  compile 'org.apache.mesos:mesos:0.22.0'
+  compile 'org.apache.mesos:mesos:0.23.0'
   compile("org.apache.shiro:shiro-guice:${shiroRev}") {
     // TODO(ksweeney): Remove this exclusion when https://issues.apache.org/jira/browse/SHIRO-496 is resolved.
     exclude group: 'com.google.guava'
